most functionality is there

--- a/backend/app/core/templates/core/base_social.html
+++ b/backend/app/core/templates/core/base_social.html
@@ -1,4 +1,4 @@
-{% extends 'django_bootstrap5/bootstrap5.html' %}
+{% extends 'core/base.html' %}
 {% load django_bootstrap5 %}
 
 {% block bootstrap5_content %}
