--- a/backend/app/core/templates/core/base.html
+++ b/backend/app/core/templates/core/base.html
@@ -1,32 +1,43 @@
 {% extends 'core/bootstrap.html' %}
 
-{% load django_bootstrap5 %}
+{% load django_bootstrap5 socialaccount %}
+
+{% block bootstrap5_before_content %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">Server Mgr</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                </li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'server-list' %}">Server</a>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+        
+        <div class="d-flex">
+            {% if not user.is_authenticated %}
+                <a type="button" href="{% provider_login_url "gitlab" %}" class="btn btn-warning">Login via gitlab.ost.ch</a>
+            {% else %}
+            <a type="button" href="{% url 'account_logout' %}" class="btn btn-warning">Logout</a>
+            {% endif %}
+        </div>
+    </div>
+</nav>
+{% autoescape off %}{% bootstrap_messages %}{% endautoescape %}
+{% endblock %}
 
 {% block bootstrap5_content %}
     <div class="container">
-        <h1>{% block title %}(no title){% endblock %}</h1>
-
-        <ul class="nav nav-pills">
-            <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">home</a></li>
-        {% comment %}
-            <li class="nav-item"><a class="nav-link" href="{% url 'formset_default' %}">formset</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'form_default' %}">form</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'form_by_field' %}">form_by_field</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'form_horizontal' %}">form_horizontal</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'form_inline' %}">form_inline</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'form_with_files' %}">form_with_files</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'pagination' %}">pagination</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'misc' %}">miscellaneous</a></li>
-        {% endcomment %}
-        </ul>
-
-        {% autoescape off %}{% bootstrap_messages %}{% endautoescape %}
-
-        {% load socialaccount %}
-
-        <a href="{% provider_login_url "gitlab" %}">Login via gitlab.ost.ch</a>
-
-        {% block content %}(no content){% endblock %}
+        <h1>{% block title %}Server Mgt{% endblock %}</h1>
+        {% block content %}{% endblock %}
     </div>
 
 {% endblock %}
