--- a/backend/app/core/templates/core/home.html
+++ b/backend/app/core/templates/core/home.html
@@ -1,8 +1,24 @@
 {% extends 'core/base.html' %}
-{% load django_bootstrap5 %}
+{% load django_bootstrap5 socialaccount %}
 
-{% block title %}django-bootstrap5{% endblock %}
+{% block title %}Home - Server Mgt{% endblock %}
 
 {% block content %}
-    This is <em>bootstrap5</em> for <strong>Django</strong>.
+    <h3>Server Mgt</h3>
+    {% if user.is_authenticated %}
+        <a type="button" class="btn btn-primary" href="{% url 'server-list' %}">Manage your Instance(s)</a>
+    {% else %}
+        You are not logged in. Please do so using the giltab.ost instance.
+        <a type="button" href="{% provider_login_url "gitlab" %}" class="btn btn-primary">Login</a>
+    {% endif %}
+    <p>
+        Forgot your laptop? Reformatted your harddrive? Issues with our "Übungsblätter"?
+        Start your instance here.
+    </p>
+    <div class="alert alert-warning" role="alert">
+        These are one-off instances and turn off automatically after 4h.
+        All your data will be erased.
+        You get full access (inclusive root password), please
+        backup your data yourself, if needed.
+    </div>
 {% endblock %}
