--- a/backend/app/server_mgr/templates/server_mgr/server_list.html
+++ b/backend/app/server_mgr/templates/server_mgr/server_list.html
@@ -25,6 +25,9 @@
         <p class="card-text">{{ server.user_message|safe }}</p>
 
         <a class="btn btn-info" href="{% url 'server-details' server.id %}">details</a>
+        {% if server.server_type.prolong_by_days and server.extending_lifetime_secret %}
+            <a href="{% url 'server-prolong' server.id server.extending_lifetime_secret %}" class="btn btn-success">prolong server</a>
+        {% endif %}
         <a href="{% url 'server-reboot' server.id %}" class="btn btn-warning">restart server</a>
         <a href="{% url 'server-delete' server.id %}" class="btn btn-danger">delete server</a>
         </div>
