--- a/backend/app/core/templates/core/bootstrap.html
+++ b/backend/app/core/templates/core/bootstrap.html
@@ -1,3 +1,3 @@
 {% extends 'django_bootstrap5/bootstrap5.html' %}
 
-{% block bootstrap5_title %}{% block title %}{% endblock %}{% endblock %}
+{% block bootstrap5_title %}{% block title %}{% endblock %} - Server Manager{% endblock %}
